added a link to harvard

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,6 +4,7 @@
 
     <nav class="site-nav d-sm-flex flex-wrap flex-content-start flex-justify-center">
       <%= link_to "GitHub Education", 'https://education.github.com', target: '_blank', class: 'd-block text-center mx-sm-3 mb-2 mb-sm-0' %>
+      <%= link_to "Harvard", 'https://harvard.edu', target: '_blank', class: 'd-block text-center mx-sm-3 mb-2 mb-sm-0' %>
 
       <ul class="list-style-none d-flex flex-justify-center">
         <% if logged_in? %>
